Переименования констант